--- a/container-playground/my-container-spec/Dockerfile
+++ b/container-playground/my-container-spec/Dockerfile
@@ -1,8 +1,9 @@
 FROM python:3.7.5-slim
+WORKDIR /usr/src/app
 
 RUN python -m pip install \
         parse \
         realpython-reader
 
-COPY test.py .
-CMD ["python", "test.py"]
+COPY tictactoe-game.py .
+CMD ["python", "tictactoe-game.py"]
