--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -15,11 +15,26 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/xenial64"
 
 
-  config.vm.define "player1" do |player1|
-    player1.vm.hostname = "player1"
-    player1.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
-    player1.vm.network "private_network", ip: "192.168.2.11"
-    player1.vm.synced_folder ".", "/vagrant", owner: "vagrant", group: "vagrant", mount_options: ["dmode=775,fmode=777"]
+  config.vm.define "webserver" do |webserver|
+
+    webserver.vm.hostname = "webserver"
+    webserver.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+    webserver.vm.network "private_network", ip: "192.168.2.11"
+    webserver.vm.synced_folder ".", "/vagrant", owner: "vagrant", group: "vagrant", mount_options: ["dmode=775,fmode=777"]
+
+    webserver.vm.provision "shell", inline: <<-SHELL
+      apt-get update
+      apt-get install -y apache2
+
+      # Change VM's webserver's configuration to use shared folder.
+      # (Look inside website.conf for specifics.)
+      cp /vagrant/website.conf /etc/apache2/sites-available/
+      # install our website configuration and disable the default
+      a2ensite website
+      a2dissite 000-default
+      service apache2 reload
+      SHELL
+
   end
 
   config.vm.define "player2" do |player2|
